samples/_failures_safe/1761503232_d2e032_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e38c34d.c: In function ‘main’:
./samples/SAFE/__tmp_5e38c34d.c:154:9: error: expected declaration or statement at end of input
  154 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_5e38c34d.c:154:9: error: expected declaration or statement at end of input
